[gd_scene load_steps=38 format=3 uid="uid://bj4xwna1y203g"]

[ext_resource type="Script" path="res://Scripts/Player.gd" id="1_ua1i3"]
[ext_resource type="FontFile" uid="uid://chr6v0f3ggr6x" path="res://Fonts/Roboto-Black.ttf" id="2_brnob"]
[ext_resource type="Script" path="res://Scripts/PlayerCamera.gd" id="2_gwedq"]
[ext_resource type="Texture2D" uid="uid://cdvwebrd6k2nl" path="res://Textures/flashlight.jpg" id="2_h3qe5"]
[ext_resource type="Script" path="res://Scripts/FPSLabel.gd" id="3_3g66n"]
[ext_resource type="Script" path="res://Scripts/EngineInfoLabel.gd" id="5_34xk0"]
[ext_resource type="FontFile" uid="uid://bstn6m2i72cls" path="res://Fonts/Roboto-Medium.ttf" id="5_ujs62"]
[ext_resource type="AudioStream" uid="uid://f5fmsmmuri2p" path="res://Sounds/Footsteps/Concrete/Step1.ogg" id="7_0tgc0"]
[ext_resource type="AudioStream" uid="uid://crtng1aw5nr52" path="res://Sounds/Footsteps/Concrete/Step2.ogg" id="8_4jdbp"]
[ext_resource type="Texture2D" uid="uid://col0drvgk8a1p" path="res://Textures/handsymbol.png" id="8_ssesy"]
[ext_resource type="AudioStream" uid="uid://ca7gb2ge7jy53" path="res://Sounds/Footsteps/Concrete/Step3.ogg" id="9_7i381"]
[ext_resource type="Script" path="res://Scripts/InteractIcon.gd" id="9_pdnxj"]
[ext_resource type="FontFile" uid="uid://b8sc1yk52qs5p" path="res://Fonts/Roboto-Regular.ttf" id="10_bghgm"]
[ext_resource type="AudioStream" uid="uid://dki0lh0pdyqw" path="res://Sounds/Footsteps/Concrete/Step4.ogg" id="10_ixj37"]
[ext_resource type="AudioStream" uid="uid://bnu0pegsvdggk" path="res://Sounds/Footsteps/Concrete/Step5.ogg" id="11_t2r3i"]
[ext_resource type="AudioStream" uid="uid://doxoh4sfccul8" path="res://Sounds/Footsteps/Concrete/Step6.ogg" id="12_vi0k3"]
[ext_resource type="Script" path="res://Scripts/ViewmodelRoot.gd" id="14_0bw8x"]
[ext_resource type="AudioStream" uid="uid://bwgjxsygk5i6d" path="res://Sounds/Footsteps/Concrete/Run/Run1.ogg" id="19_enlrm"]
[ext_resource type="AudioStream" uid="uid://h8ni2jr73lpc" path="res://Sounds/Footsteps/Concrete/Step7.ogg" id="19_qr3u7"]
[ext_resource type="AudioStream" uid="uid://bv1ecf5lpk18d" path="res://Sounds/D9341/breath0.ogg" id="19_u2ce7"]
[ext_resource type="AudioStream" uid="uid://eusj1nljlese" path="res://Sounds/Footsteps/Concrete/Run/Run2.ogg" id="20_his7y"]
[ext_resource type="AudioStream" uid="uid://om6m5yt8wjk" path="res://Sounds/Footsteps/Concrete/Step8.ogg" id="20_nfc3o"]
[ext_resource type="AudioStream" uid="uid://d22csr42tng6j" path="res://Sounds/Footsteps/Concrete/Run/Run3.ogg" id="21_bbqrs"]
[ext_resource type="AudioStream" uid="uid://da7750wrbwcq6" path="res://Sounds/Footsteps/Concrete/Run/Run4.ogg" id="22_mftju"]
[ext_resource type="AudioStream" uid="uid://dl3qifkaidyqs" path="res://Sounds/Footsteps/Concrete/Run/Run5.ogg" id="23_r74hg"]
[ext_resource type="AudioStream" uid="uid://3gf812yr8ad5" path="res://Sounds/Footsteps/Concrete/Run/Run6.ogg" id="24_orfgj"]
[ext_resource type="AudioStream" uid="uid://cl4xd4b8evr6t" path="res://Sounds/Footsteps/Concrete/Run/Run7.ogg" id="27_jejbb"]
[ext_resource type="AudioStream" uid="uid://iqp18nrbdygd" path="res://Sounds/Footsteps/Concrete/Run/Run8.ogg" id="28_x0ee8"]

[sub_resource type="CapsuleShape3D" id="CapsuleShape3D_vtsqa"]
radius = 0.265769

[sub_resource type="LabelSettings" id="LabelSettings_i48im"]
font = ExtResource("2_brnob")
shadow_color = Color(0, 0, 0, 0)
shadow_offset = Vector2(0, 0)

[sub_resource type="LabelSettings" id="LabelSettings_0eahu"]
font = ExtResource("5_ujs62")
shadow_color = Color(0, 0, 0, 0)
shadow_offset = Vector2(0, 0)

[sub_resource type="Animation" id="Animation_s4nmt"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="Animation" id="Animation_ndxxj"]
resource_name = "show"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("RichTextLabel:modulate")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(1, 1, 1, 0)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rg0yj"]
_data = {
"RESET": SubResource("Animation_s4nmt"),
"show": SubResource("Animation_ndxxj")
}

[sub_resource type="SphereShape3D" id="SphereShape3D_jlepi"]
radius = 1.11421

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_xkrxt"]
streams_count = 8
playback_mode = 2
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("7_0tgc0")
stream_0/weight = 1.0
stream_1/stream = ExtResource("8_4jdbp")
stream_1/weight = 1.0
stream_2/stream = ExtResource("9_7i381")
stream_2/weight = 1.0
stream_3/stream = ExtResource("10_ixj37")
stream_3/weight = 1.0
stream_4/stream = ExtResource("11_t2r3i")
stream_4/weight = 1.0
stream_5/stream = ExtResource("12_vi0k3")
stream_5/weight = 1.0
stream_6/stream = ExtResource("19_qr3u7")
stream_6/weight = 1.0
stream_7/stream = ExtResource("20_nfc3o")
stream_7/weight = 1.0

[sub_resource type="AudioStreamRandomizer" id="AudioStreamRandomizer_h7dfb"]
streams_count = 8
playback_mode = 2
random_pitch = 1.0
random_volume_offset_db = 0.0
stream_0/stream = ExtResource("19_enlrm")
stream_0/weight = 1.0
stream_1/stream = ExtResource("20_his7y")
stream_1/weight = 1.0
stream_2/stream = ExtResource("21_bbqrs")
stream_2/weight = 1.0
stream_3/stream = ExtResource("22_mftju")
stream_3/weight = 1.0
stream_4/stream = ExtResource("23_r74hg")
stream_4/weight = 1.0
stream_5/stream = ExtResource("24_orfgj")
stream_5/weight = 1.0
stream_6/stream = ExtResource("27_jejbb")
stream_6/weight = 1.0
stream_7/stream = ExtResource("28_x0ee8")
stream_7/weight = 1.0

[node name="Player" type="CharacterBody3D"]
script = ExtResource("1_ua1i3")
stamina_deplete_rate = 0.1
stamina_regen_rate = 0.1

[node name="CollisionShape3D" type="CollisionShape3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1, 0)
shape = SubResource("CapsuleShape3D_vtsqa")

[node name="RotationHelper" type="Node3D" parent="."]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)

[node name="Camera3D" type="Camera3D" parent="RotationHelper"]
current = true
near = 0.022
script = ExtResource("2_gwedq")

[node name="SpotLight3D" type="SpotLight3D" parent="RotationHelper/Camera3D"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.0417991, 0)
visible = false
light_color = Color(0.976471, 1, 0.85098, 1)
light_energy = 0.7
light_projector = ExtResource("2_h3qe5")
light_bake_mode = 0
shadow_enabled = true
spot_range = 17.9379

[node name="RayCast3D" type="RayCast3D" parent="."]
transform = Transform3D(1, 0, 0, 0, -4.37114e-08, -1, 0, 1, -4.37114e-08, 0, 1.88524, 0)

[node name="UI" type="Control" parent="."]
anchor_right = 1.0
anchor_bottom = 1.0

[node name="InteractIcon" type="Sprite2D" parent="UI"]
visible = false
texture = ExtResource("8_ssesy")
script = ExtResource("9_pdnxj")

[node name="Blink" type="ColorRect" parent="UI"]
visible = false
anchor_right = 1.0
anchor_bottom = 1.0
color = Color(0, 0, 0, 1)

[node name="Overlay" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 16
theme_override_constants/margin_top = 16
theme_override_constants/margin_right = 16
theme_override_constants/margin_bottom = 16

[node name="VBoxContainer" type="VBoxContainer" parent="UI/Overlay"]
offset_left = 16.0
offset_top = 16.0
offset_right = 1904.0
offset_bottom = 1064.0

[node name="FPSLabel" type="Label" parent="UI/Overlay/VBoxContainer"]
offset_right = 1888.0
offset_bottom = 522.0
size_flags_vertical = 3
text = "144 FPS"
label_settings = SubResource("LabelSettings_i48im")
script = ExtResource("3_3g66n")

[node name="EngineInfoLabel" type="Label" parent="UI/Overlay/VBoxContainer"]
offset_top = 526.0
offset_right = 1888.0
offset_bottom = 1048.0
size_flags_vertical = 3
label_settings = SubResource("LabelSettings_0eahu")
horizontal_alignment = 2
vertical_alignment = 2
script = ExtResource("5_34xk0")

[node name="HUD" type="MarginContainer" parent="UI"]
anchor_right = 1.0
anchor_bottom = 1.0
theme_override_constants/margin_left = 64
theme_override_constants/margin_top = 64
theme_override_constants/margin_right = 64
theme_override_constants/margin_bottom = 64

[node name="VBoxContainer" type="VBoxContainer" parent="UI/HUD"]
offset_left = 64.0
offset_top = 64.0
offset_right = 1856.0
offset_bottom = 1016.0
alignment = 2

[node name="HBoxContainer" type="HBoxContainer" parent="UI/HUD/VBoxContainer"]
offset_top = 952.0
offset_right = 1792.0
offset_bottom = 952.0

[node name="Panel" type="Panel" parent="UI/HUD/VBoxContainer/HBoxContainer"]

[node name="TextureProgressBar" type="TextureProgressBar" parent="UI/HUD/VBoxContainer/HBoxContainer/Panel"]
custom_minimum_size = Vector2(300, 32)
anchor_right = 1.0
anchor_bottom = 1.0
nine_patch_stretch = true

[node name="Message" type="MarginContainer" parent="UI"]
custom_minimum_size = Vector2(0, 100)
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -960.0
offset_top = 50.0
offset_right = 960.0
offset_bottom = 150.0
grow_horizontal = 2
grow_vertical = 2
metadata/_edit_layout_mode = 1

[node name="RichTextLabel" type="RichTextLabel" parent="UI/Message"]
modulate = Color(1, 1, 1, 0)
offset_right = 1920.0
offset_bottom = 100.0
theme_override_fonts/normal_font = ExtResource("10_bghgm")
theme_override_font_sizes/normal_font_size = 24
bbcode_enabled = true
text = "[center]Door won't open."

[node name="AnimationPlayer" type="AnimationPlayer" parent="UI/Message"]
libraries = {
"": SubResource("AnimationLibrary_rg0yj")
}

[node name="Viewmodel" type="Node" parent="."]

[node name="ViewmodelRoot" type="Node3D" parent="Viewmodel"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8, 0)
script = ExtResource("14_0bw8x")

[node name="InteractArea" type="Area3D" parent="."]
collision_layer = 0
collision_mask = 2
monitorable = false

[node name="CollisionShape3D" type="CollisionShape3D" parent="InteractArea"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.999365, 0)
shape = SubResource("SphereShape3D_jlepi")

[node name="SFX" type="Node3D" parent="."]

[node name="Footsteps" type="Node3D" parent="SFX"]

[node name="Concrete" type="AudioStreamPlayer3D" parent="SFX/Footsteps"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.82633, 0)
stream = SubResource("AudioStreamRandomizer_xkrxt")
max_polyphony = 4
panning_strength = 0.0
bus = &"Footsteps"

[node name="ConcreteRun" type="AudioStreamPlayer3D" parent="SFX/Footsteps/Concrete"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.82633, 0)
stream = SubResource("AudioStreamRandomizer_h7dfb")
max_polyphony = 4
panning_strength = 0.0
bus = &"Footsteps"

[node name="Breath" type="AudioStreamPlayer3D" parent="SFX"]
transform = Transform3D(1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 1.8377, 0)
stream = ExtResource("19_u2ce7")
panning_strength = 0.0
bus = &"SFX"
